testsuite/bsc.interra/messages/EGeneric/EGeneric.bs.bsc-vcomp-out.expected
checking package dependencies
compiling EGeneric.bs
code generation for mkTest starts
Error: "EGeneric.bs", line 29, column 10: (G0004)
  Rule `RL_Assign_x' uses methods that conflict in parallel:
    x.write(...)
  and
    x.write(...)
  For the complete expressions use the flag `-show-range-conflict'.
